# lucidPID

./: .gitignore  CMakeLists.txt  Makefile  README.md  lucidDrvtCtrl.cpp  lucidIntgCtrl.cpp  lucidIntgCtrl.h  lucidPDCtrl.cpp  lucidPDCtrl.h  lucidPICtrl.cpp  lucidPIDCtrl.h  lucidPropCtrl.cpp  lucidTest.cpp
example/: CMakeLists.txt  Makefile
example/PIDTest/: lucidTest.cpp  module.mk
include/: lucidDrvtCtrl.h  lucidPICtrl.h  lucidPlant.h
libLucidPID/: lucidPIDCtrl.cpp  module.mk
lucidPID/: CMakeLists.txt  Makefile  lucidPropCtrl.h
lucidPID/lucidPID/: module.mk
lucidPlant/: CMakeLists.txt  Makefile  lucidPlant.cpp
lucidPlant/lucidPlant/: module.mk
visualize/: graph.py
